syntax = "proto3";

package pb_storage;

import "data_processing.proto";

option go_package = "server-test/server-process-data/pb_processing";

message DataInfoTestResquest1{
    string dataTest = 1;
}

message DataInfoTestRespone1{
    string  dataResp = 1;
}



message ProcessingFileResquest{
    FileInfoProcess fileinfoprocess = 1;
}

message ProcessingFileRespone{
    string noti = 1;
}

message ExportFileResquest{
    string templateExport = 1;
}

message ExportFileRespone{
    bytes pathExport = 1;
}

message DownloadFileProcessResquest{
    string dir = 1;
}

message DownloadFileProcessRespone{
    string nameFile = 1;
    bytes contentFile = 2;
}